[gd_scene load_steps=3 format=3 uid="uid://bb4o8vdqvi1rt"]

[ext_resource type="Script" path="res://UI Scripts/login_screen.gd" id="1_2ene8"]
[ext_resource type="Texture2D" uid="uid://ucowm06kn1ey" path="res://Images/login_screen_bg.jpg" id="2_4gtak"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ene8")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_right = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4gtak")
metadata/_edit_lock_ = true

[node name="LoginContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -64.5
offset_right = 137.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1
metadata/_edit_lock_ = true

[node name="LoginModeTabContainer" type="TabContainer" parent="LoginContainer"]
layout_mode = 2
tab_alignment = 1

[node name="Login" type="Control" parent="LoginContainer/LoginModeTabContainer"]
layout_mode = 2

[node name="New User" type="Control" parent="LoginContainer/LoginModeTabContainer"]
visible = false
layout_mode = 2

[node name="LoginPanel" type="PanelContainer" parent="LoginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="LoginContainer/LoginPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="LoginVBoxContainer" type="VBoxContainer" parent="LoginContainer/LoginPanel/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="UsernameTextEdit" type="LineEdit" parent="LoginContainer/LoginPanel/MarginContainer/LoginVBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "Username"

[node name="PasswordTextEdit" type="LineEdit" parent="LoginContainer/LoginPanel/MarginContainer/LoginVBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "Password"

[node name="SubmitButton" type="Button" parent="LoginContainer/LoginPanel/MarginContainer/LoginVBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Submit"

[node name="ErrorLabel" type="Label" parent="LoginContainer"]
visible = false
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.92549, 0.105882, 0.0823529, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="LoginContainer/LoginPanel/MarginContainer/LoginVBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
